# PhantomLite

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_and_run.sh  build_game.sh  conanfile.txt
.cursor/rules/: gamerules.mdc
.github/workflows/: ci.yml
docs/: ASSETS.md  PROGRESS.md  WORLDBUILDING.MD
scripts/: new_slice.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  entity_adapter.cpp  main.cpp  ui_adapter.cpp  world_adapter.cpp
src/core/public/: core.hpp  entity.hpp  ui.hpp  world.hpp
src/features/enemies/: CMakeLists.txt  README.md  behavior_atoms.cpp  behavior_atoms.hpp  types.cpp  types.hpp
src/features/enemy_slime/: CMakeLists.txt  README.md  enemy_slime.cpp  enemy_slime.cpp.bak  enemy_slime.hpp
src/features/enemy_slime/atoms/: behavior_atoms.cpp  behavior_atoms.hpp  enemy_combat.cpp  enemy_combat.hpp  enemy_movement.cpp  enemy_movement.hpp  enemy_renderer.cpp  enemy_renderer.hpp  enemy_spawner.cpp  enemy_spawner.hpp  enemy_spawning.cpp  enemy_spawning.hpp  enemy_state.cpp  enemy_state.hpp
src/features/enemy_slime/model/: enemy_data.hpp
src/features/enemy_slime/tests/: test_slime_behavior.cpp  test_slime_spec.cpp
src/features/player/: CMakeLists.txt  README.md  player.cpp  player.hpp
src/features/player/atoms/: actions.cpp  actions.hpp  animation.cpp  animation.hpp  collision.cpp  collision.hpp  debug_draw.cpp  debug_draw.hpp  health.cpp  health.hpp  movement.cpp  movement.hpp
src/features/player/molecules/: controller.cpp  controller.hpp  hearts_controller.cpp  hearts_controller.hpp
src/features/player/tests/: test_health.cpp  test_player.cpp
src/features/ui/: CMakeLists.txt  README.md  ui.cpp  ui.hpp
src/features/ui/atoms/: hearts.cpp  hearts.hpp
src/features/ui/molecules/: hearts_controller.cpp  hearts_controller.hpp
src/features/ui/tests/: test_hearts.cpp
src/features/world/: CMakeLists.txt  README.md  world.cpp  world.hpp
src/features/world/atoms/: camera.cpp  camera.hpp  obstacle_detector.cpp  obstacle_detector.hpp  tilemap.cpp  tilemap.hpp
src/shared/: CMakeLists.txt  math_utils.hpp
src/shared/opensimplex2/: opensimplex2.h
tests/: CMakeLists.txt
tools/: convert_svgs.sh  link_assets.sh
